# command-line-utility

./: .gitignore  CMakeLists.txt
cmake/: config.cmake  dependencies.cmake  flags.cmake
include/: banner.hpp  menu.hpp
include/bmi_calculator/: bmi_calculator.hpp  bmi_calculator2.hpp
src/: CMakeLists.txt  banner.cpp  banner.hpp  main.cpp  menu.cpp
src/bmi_calculator/: CMakeLists.txt  bmi_calculator.cpp  bmi_calculator2.cpp
tst/: CMakeLists.txt  tst_banner.cpp  tst_main.cpp  tst_menu.cpp
tst/bmi_calculator/: CMakeLists.txt  tst_bmi_calculator.cpp
